Project

General

Profile

Actions

Bug #6279

closed

[mswin32] add_suffix/bug.c build error

Added by jonforums (Jon Forums) about 12 years ago. Updated about 12 years ago.

Status:
Closed
ruby -v:
[ruby-core:44277]

Description

On Win7 32bit using Windows SDK 7.1 I get the following build error on ruby_1_9_3@35256. Trunk builds OK and passes nmake test.

C:\Users\Jon\Documents\RubyDev\ruby-git\build>cl /?
Microsoft (R) 32-bit C/C++ Optimizing Compiler Version 16.00.30319.01 for 80x86

C:\Users\Jon\Documents\RubyDev\ruby-git\build>..\win32\configure.bat --disable-install-doc --disable-win95

C:\Users\Jon\Documents\RubyDev\ruby-git\build>nmake
...
configuring win32ole
configuring zlib
Failed to configure zlib. It will not be installed.
generating bug-i386-mswin32_100.def
compiling ../../../../ext/-test-/add_suffix/bug.c
bug.c
../../../../ext/-test-/add_suffix/bug.c(34) : error C2129: static function 'void ruby_add_suffix(VALUE,const char *)' declared but not defined
../../../../ext/-test-/add_suffix/bug.c(4) : see declaration of 'ruby_add_suffix'
NMAKE : fatal error U1077: '"C:\Program Files\Microsoft Visual Studio 10.0\VC\Bin\cl.EXE"' : return code '0x2'
Stop.
NMAKE : fatal error U1077: 'cd' : return code '0x2'
Stop.
NMAKE : fatal error U1077: '"C:\Program Files\Microsoft Visual Studio 10.0\VC\Bin\nmake.EXE"' : return code '0x2'
Stop.

Actions #1

Updated by nobu (Nobuyoshi Nakada) about 12 years ago

  • Tracker changed from Bug to Backport
  • Project changed from Ruby master to Backport193
  • Category deleted (build)
  • Target version deleted (1.9.3)
Actions #2

Updated by nobu (Nobuyoshi Nakada) about 12 years ago

  • Tracker changed from Backport to Bug
Actions #3

Updated by nobu (Nobuyoshi Nakada) about 12 years ago

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r35295.
Jon, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


Actions

Also available in: Atom PDF

Like0
Like0Like0Like0