* ext/-test-/add_suffix/bug.c (ruby_add_suffix): no static   declaration.  [ruby-core:44277][Bug #6279]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_3@35295 b2dd03c8-39d4-4d8f-98ff-823fe69b080e